--- a/Soil_Moisture_Predicting_System.ipynb
+++ b/Soil_Moisture_Predicting_System.ipynb
@@ -3644,6 +3644,11 @@
         "imputed_X_train_plus.columns = X_train_plus.columns\n",
         "imputed_X_valid_plus.columns = X_valid_plus.columns\n",
         "\n",
+        "# Bundle preprocessing and modeling code in a pipeline\n",
+        "my_pipeline = Pipeline(steps=[('preprocessor', SimpleImputer(strategy=\"mean\")),\n",
+        "                              ('model', RandomForestRegressor(n_estimators=1000, random_state=32))\n",
+        "                             ])\n",
+        "\n",
         "# Preprocessing of training data, fit model \n",
         "my_pipeline.fit(imputed_X_train_plus, y_train)\n",
         "\n",
